--- a/Week 2/conFusion/index.html
+++ b/Week 2/conFusion/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <button type="button" class="btn btn-warning btn-lg" href="#">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -72,8 +75,16 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <img class="d-flex order-sm-last ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -88,6 +99,41 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label"><strong>Number of Guests</strong></label>
+                                <div class="col-md-10">
+                                    <input type="radio" id="guests" name="guests"> 1 &nbsp;
+                                    <input type="radio" id="guests" name="guests"> 2 &nbsp;
+                                    <input type="radio" id="guests" name="guests"> 3 &nbsp;
+                                    <input type="radio" id="guests" name="guests"> 4 &nbsp;
+                                    <input type="radio" id="guests" name="guests"> 5 &nbsp;
+                                    <input type="radio" id="guests" name="guests"> 6 &nbsp;
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="telnum" class="col-12 col-md-2 col-form-label"><strong>Date and Time</strong></label>
+                                <div class="col-12 col-md-3">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-md-3">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row offset-2">
+                                <button type="submit" class="btn btn-primary" href="#">Reserve</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
